--- a/index.html
+++ b/index.html
@@ -1,34 +1,99 @@
 <!DOCTYPE html>
-<html>
+<html lang="th">
 <head>
-  <title>เลือกวันดูบ้าน</title>
+  <meta charset="UTF-8">
+  <title>จองวันดูบ้าน</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;600&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Kanit', sans-serif;
+      background-color: #f0f4f8;
+      padding: 20px;
+      text-align: center;
+      color: #333;
+    }
+
+    h2 {
+      margin-bottom: 30px;
+      font-size: 28px;
+      color: #2c3e50;
+    }
+
+    .form-group {
+      margin-bottom: 20px;
+    }
+
+    label {
+      font-size: 18px;
+      display: block;
+      margin-bottom: 8px;
+    }
+
+    input[type="date"],
+    input[type="time"] {
+      padding: 12px;
+      font-size: 18px;
+      width: 80%;
+      max-width: 300px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+    }
+
+    button {
+      background-color: #2ecc71;
+      color: white;
+      padding: 14px 30px;
+      font-size: 20px;
+      border: none;
+      border-radius: 12px;
+      cursor: pointer;
+      margin-top: 25px;
+    }
+
+    button:hover {
+      background-color: #27ae60;
+    }
+  </style>
 </head>
 <body>
-  <h2>เลือกวัน-เวลาเพื่อจองดูบ้าน</h2>
-  <input type="date" id="date" />
-  <input type="time" id="time" />
+  <h2>📅 เลือกวันและเวลาเพื่อจองดูบ้าน</h2>
+
+  <div class="form-group">
+    <label for="date">เลือกวันที่</label>
+    <input type="date" id="date" />
+  </div>
+
+  <div class="form-group">
+    <label for="time">เลือกเวลา</label>
+    <input type="time" id="time" />
+  </div>
+
   <button onclick="submitReservation()">ยืนยัน</button>
 
   <script>
     async function main() {
-      await liff.init({ liffId: 'YOUR_LIFF_ID' });
+      await liff.init({ liffId: '2007520214-3V1lDOWV' });
+      liff.login();
     }
 
     async function submitReservation() {
       const date = document.getElementById('date').value;
       const time = document.getElementById('time').value;
+
       if (!date || !time) {
-        alert("กรุณาเลือกวันและเวลาให้ครบ");
+        alert("กรุณาเลือกวันและเวลาให้ครบก่อนค่ะ");
         return;
       }
 
-      const message = `📅 ขอจองดูบ้านวันที่ ${date} เวลา ${time}`;
+      const message = `🗓 ขอจองนัดดูบ้าน\nวันที่: ${date}\nเวลา: ${time}`;
+
       if (liff.isInClient()) {
         await liff.sendMessages([{ type: 'text', text: message }]);
         liff.closeWindow();
       } else {
-        alert("กรุณาเปิดในแอพ LINE");
+        alert("กรุณาเปิดลิงก์นี้ในแอพ LINE เพื่อทำการจอง");
       }
     }
 
