--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@
 
   <script>
     async function main() {
-      await liff.init({ liffId: '2007520214-3V1lDOWV' });
-      liff.login();
+      await liff.init({ liffId: '2007520214-3V1lDOWV' });;
     }
 
     async function submitReservation() {
