--- a/index.html
+++ b/index.html
@@ -95,20 +95,18 @@
       const now = new Date();
       const selectedDate = new Date(date + 'T' + time);
 
-      // เช็กเวลาอยู่นอกช่วง 08:00-18:00
       const [hour, minute] = time.split(':').map(Number);
       if (hour < 8 || hour > 20 || (hour === 19 && minute > 30)) {
         alert("สามารถจองดูบ้านได้เฉพาะระหว่าง 08:00 - 19:30 เท่านั้นค่ะ");
         return;
       }
 
-      // เช็กเวลาในอดีต
       if (selectedDate <= now) {
         alert("วันหรือเวลาที่เลือกผ่านมาแล้ว กรุณาเลือกใหม่ค่ะ");
         return;
       }
 
-      const message = `🗓 ขอจองนัดดูบ้าน\nวันที่: ${date}\nเวลา: ${time}`;
+      const message = `🗓 ขอจองนัดดูอสังหาริมทรัพย์\nวันที่: ${date}\nเวลา: ${time}`;
 
       if (liff.isInClient()) {
         await liff.sendMessages([{ type: 'text', text: message }]);
